--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-16" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TanStack Router</title>
+    <title>Take a Quiz</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css" />
     <style type="text/tailwindcss">
       html {
         color-scheme: light dark;
+        overflow: hidden;
+        height: 100%;
+      }
+      body {
+        height: 100%;
+      }
+      #app {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
       }
       * {
         @apply border-gray-200 dark:border-gray-800;
