Moved backend from env to constants for reliability.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         flex-direction: column;
       }
       * {
-        @apply border-gray-200 dark:border-gray-800;
+        @apply border-gray-200 dark:border-gray-800 dark:bg-black;
       }
     </style>
   </head>
